examples/test/testpolicy15126.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15126
  namespace: namespace497
spec:
  podSelector:
    matchLabels:
      key46: value2
      key47: value26
      key0: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value18
          key20: value31
          key22: value7
      podSelector:
        matchLabels:
          key35: value6
          key48: value26
